kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testify-application
spec:
  finalizers:
    - kubernetes
