kubernetes/frontend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testify-frontend
  labels: 
    app: frontend
  namespace: testify-application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      serviceAccountName: frontend
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: testify-frontend
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
          image: vanthiyadevan4g/
          ports:
          - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "150Mi"
            limits:
              cpu: "150m"
              memory: "250Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 15
