kubernetes/chroma_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chroma_db
  label: chroma_db
  namespace: Testify-Application
spec:
  selector:
    app: chroma_db
    label: chroma_db
  ports:
    - protocol: TCP
  type: NodePort
