kubernetes/frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels: 
    app: frontend
  namespace: testify-application
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
